--- a/src/component/ClubInfo/ClubInfo.css
+++ b/src/component/ClubInfo/ClubInfo.css
@@ -2,7 +2,7 @@
     background-color: rgb(216, 219, 200);
 }
 .gender-image{
-    width: 400px;
+    width: 100%;
     height: 200px;
 }
 .club-details-div{
